<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fkzhang.qqunrecalled.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="10dp"
                android:text="@string/support"
                android:visibility="gone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/enable_recall_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/enable_notification" />

            <Switch
                android:id="@+id/enable_troopassistant_recall_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/enable_troopassistant_notification" />

            <Switch
                android:id="@+id/show_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/show_content" />

            <Switch
                android:id="@+id/vibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/enable_vibrate" />

            <Switch
                android:id="@+id/ringtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/enable_ringtone" />

            <TextView
                android:id="@+id/ringtone_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/select_ringtone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ringtone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:text="@string/default_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recalled_message"
                android:padding="15dp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>
